src/styles.css
h2.forecast-section {
  font-size: 20px;
  margin: 2px;
  color: #009bde;
  font-weight: 500;
}

footer {
  font-family: "Courier New", Courier, monospace;
  text-align: center;
  font-size: small;
  font-style: italic;
  color: whitesmoke;
}

.main-page {
  font-family: Arial, Helvetica, sans-serif;
  margin-top: 10px;
  padding: 10px;
  max-width: 600px;
}

.footer-link {
  text-decoration: underline;
  color: whitesmoke;
}

.footer-link:hover {
  color: #002a41;
}

.borders {
  border: 2px solid #002a41;
  border-radius: 5px;
  background-color: whitesmoke;
}

.search-entry {
  background-color: whitesmoke;
  padding: 5px;
  width: 50%;
}

.search-button,
.current-button {
  padding: 5px;
  color: white;
  transition: 300ms all ease-in-out;
}

.search-button:hover,
.current-button:hover {
  background-color: white;
  color: #002a41;
}

.search-button {
  background-color: #002a41;
}

.current-button {
  background-color: #00adec;
  border-color: #00adec;
}

.current-section {
  margin: 15px auto;
}

.current-details li {
  list-style: none;
}

.last-updated {
  font-style: italic;
  font-size: 12px;
  text-align: right;
}

.current-icon {
  font-size: 15px;
  color: #002a41;
  text-align: right;
}

.current-city {
  color: #009bde;
  font-size: 30px;
  text-align: left;
  text-transform: capitalize;
  font-weight: 600;
}

.current-description {
  font-size: 15px;
  color: #002a41;
  text-transform: capitalize;
}

.active {
  color: #002a41;
  text-decoration: none;
  cursor: default;
}

.active:hover {
  color: #002a41;
}

.inactive {
  text-decoration: none;
}

.inactive:hover {
  text-decoration: underline;
}

.inner {
  margin: 1px;
}

.forecast-section {
  margin: 15px auto;
  padding: 5px;
  text-align: center;
}

.card-day {
  color: #757575;
  padding-bottom: 5px;
  font-weight: 600;
  font-size: medium;
}

.card-temp {
  padding-bottom: 10px;
  color: #002a41;
  font-size: small;
}

.card-icon {
  color: 002a41;
  font-size: 40px;
  padding-bottom: 5px;
}

